// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> filled-in 1`] = `
<label
  htmlFor="mockId"
>
  <input
    className="filled-in"
    id="mockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders 1`] = `
<label
  htmlFor="mockId"
>
  <input
    className=""
    id="mockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders disabled 1`] = `
<label
  htmlFor="mockId"
>
  <input
    className=""
    disabled={true}
    id="mockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> with id 1`] = `
<label
  htmlFor="test"
>
  <input
    className=""
    id="test"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> with indeterminate 1`] = `
<label
  htmlFor="indeterminate-checkbox"
>
  <input
    className=""
    id="indeterminate-checkbox"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;
